fix: 被选中菜单的颜色

--- a/src/panel/toolkit_manager/style.scss
+++ b/src/panel/toolkit_manager/style.scss
@@ -8,7 +8,8 @@
   }
 
   a.list-group-item-info.list-group-item-warning {
-    color: #31708f;
+    color: #8a6d3b;
+    background-color: #faf2cc;
     font-weight: bold;
   }
 }
