--- a/mockup/app/view/oauth.html
+++ b/mockup/app/view/oauth.html
@@ -21,7 +21,7 @@
       <input type="hidden" name="code" value="{{ code }}" />
       <div class="form-group">
         <div class="col-xs-8 col-xs-offset-2">
-          <input type="text" name="username" class="form-control text-center" />
+          <input type="text" name="username" class="form-control text-center" autocomplete="off" />
         </div>
       </div>
       <div class="form-group">
