A: mockup/debugger/menu

--- a/mockup/rsrc/debugger/components/MenuGroup.scss
+++ b/mockup/rsrc/debugger/components/MenuGroup.scss
@@ -11,5 +11,10 @@
   &-selected {
     background-color: #d3dce6;
   }
+
+  &-dirty {
+    color: #8a6d3b;
+    background-color: #faf2cc;
+  }
 }
 
