--- a/mockup/app/view/debugger.html
+++ b/mockup/app/view/debugger.html
@@ -6,19 +6,10 @@
   <meta name="viewport" content="initial-scale=1.0, maximum-scale=1, minimum-scale=1, user-scalable=no">
 
   <link rel="stylesheet" href="/public/css/vendor/antd.css" />
-
-  {% if env === 'dev' %}
-  {% else %}
-  <link rel="stylesheet" href="/public/dist/debugger-stamp4hash.css" />
-  {% endif %}
 </head>
 <body>
   <div class="App"></div>
 
-  {% if env === 'dev' %}
-  <script src="http://127.0.0.1:3001/static/js/debugger-stamp4hash.js"></script>
-  {% else %}
-  <script src="/public/dist/debugger-stamp4hash.js"></script>
-  {% endif %}
+  {{ helper.rsrc("dist", "debugger-stamp4hash.js") | safe | inline }}
 </body>
 </html>
