--- a/mockup/app/view/index.html
+++ b/mockup/app/view/index.html
@@ -4,19 +4,10 @@
   <title>wechat-pivot-mockup</title>
   <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="initial-scale=1.0, maximum-scale=1, minimum-scale=1, user-scalable=no">
-
-  {% if env === 'dev' %}
-  {% else %}
-  <link rel="stylesheet" href="/public/dist/index-stamp4hash.css" />
-  {% endif %}
 </head>
 <body>
   <div class="App"></div>
 
-  {% if env === 'dev' %}
-  <script src="http://127.0.0.1:3001/static/js/index-stamp4hash.js"></script>
-  {% else %}
-  <script src="/public/dist/index-stamp4hash.js"></script>
-  {% endif %}
+  {{ helper.rsrc("dist", "index-stamp4hash.js") | safe | inline }}
 </body>
 </html>
